# CMPE492-Design-and-Implementation-of-a-Robust-LLMOps-Platform

./: .gitignore  GEMINI.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: cd.yml  ci.yml
.specify/: feature.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
backend/: README.md  __init__.py  requirements.txt
backend/app/: main.py
backend/src/: main.py
backend/tests/: conftest.py
docs/: midterm_report.tex
frontend/: conftest.py  pytest.ini
frontend/.streamlit/: config.toml
frontend/src/: app.py
specs/001-mock-deployment-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-llm-hf-inference/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-hf-browser-login/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-robust-model-upload/: plan.md  quickstart.md  research.md  tasks.md
specs/005-folder-upload-repo-deploy/: tasks.md
specs/006-session-persistence/: quickstart.md  tasks.md
specs/008-gpu-cpu-deploy/: spec.md  tasks.md
specs/009-local-model-hf-deploy/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/010-prometheus-grafana-monitoring/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-streamlit-dashboard-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
src/: app.py  cache.py  config.py  hf_client.py  oauth.py
static/: index.html
(+109 files in other folders)
